--- a/appspec.yml
+++ b/appspec.yml
@@ -6,9 +6,9 @@ files:
  - source: /_config.yml
    destination: /var/www/html/
  - source: css
-   destination: /var/www/html/
+   destination: /var/www/html/css/
  - source: images
-   destination: /var/www/html/    
+   destination: /var/www/html/images/   
 hooks:
    Applicationstart:
     - location: script/restart.sh
